# scallfoldaiagent

./: .env.example  .gitignore  ARCHITECTURE_GITMCP.md  ARTIFACTS_GUIDE.md  ARTIFACTS_SUMMARY.md  CHANGES.md  GITMCP_INTEGRATION.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  infosmcpskill.md  install.sh  pyproject.toml  setup.sh
backend/: config.py  main.py
backend/agents/: __init__.py  base_agent.py  lead_generator.py  social_media_manager.py  wordpress_blogger.py
backend/core/: base_node.py  orchestrator.py  shared.py
backend/integrations/: gitmcp.py
backend/llm/: gemini_client.py  prompt_builder.py  token_counter.py
backend/mcp/: __init__.py  artifact_store.py  artifacts.py  schemas.py  server.py  tools.py
backend/mcp/tool_modules/: __init__.py  content.py  social_media.py  web_scraping.py  wordpress.py
backend/memory/: context_manager.py  graph_memory.py  vector_store.py
backend/nodes/: action.py  feedback.py  interpretation.py  memory.py  perception.py  reasoning.py  synthesis.py
backend/utils/: logger.py  validators.py
config/: agent_config.yaml  mcp_tools_config.yaml  wordpress_config.yaml
examples/: artifacts_demo.py  complete_agent_example.py  lead_generator_agent.py  social_media_manager_agent.py  wordpress_blog_agent.py
frontend/: app.js  index.html  styles.css
output_leads/: coffee_shops_seattle.json
scripts/: deploy.sh  run_agent.sh  setup_wordpress.sh
tests/: test_artifacts.py  test_mcp.py  test_nodes.py  test_orchestrator.py  test_shared.py
